# fizsh

./: Makefile  Makefile.am  Makefile.in  Makefile.readme  README  README.md  configure  configure.ac  test_requirements.sh
debian/: README.source  changelog  control  copyright  rules
doc/: Makefile.in  changelog  copyright
etc/fizsh/: fizsh-history-search-backward  fizshrc  zsh-history-substring-search-backward  zsh-syntax-highlighting
fizsh-1.0.1/: Makefile.am  Makefile.in  configure  configure.ac
fizsh-1.0.1/doc/: Makefile.am  Makefile.in  zsh-syntax-highlighting.readme
fizsh-1.0.1/man/: Makefile.in
fizsh-1.0.1/scripts/: Makefile.am  Makefile.in  fizsh  fizsh-prompt  fizshrc  modify-etc-shells  zsh-syntax-highlighting  zsh-syntax-highlighting.patch
fizsh-1.0.2/: COPYING  Makefile  Makefile.in  config.status  configure  configure.ac
fizsh-1.0.2/doc/: Makefile  Makefile.in  copyright
fizsh-1.0.2/examples/: Makefile  Makefile.in
fizsh-1.0.2/man/: Makefile  Makefile.am
fizsh-1.0.2/scripts/: .Makefile.am.swp  .fizsh.swp  Makefile  Makefile.am  Makefile.in  fizsh  fizshrc.zsh
fizsh-1.0.2/src/: Makefile
fizsh-1.0.3/: COPYING
fizsh-1.0.3/doc/: changelog
fizsh-1.0.3/man/: README  fizsh.1  fizsh.pod
fizsh-1.0.3/scripts/: fizsh
fizsh-1.0.3/src/: Makefile.in
fizsh-1.0.4/: configure
fizsh-1.0.4/doc/: Makefile.am  Makefile.in  changelog  copyright
fizsh-1.0.4/man/: Makefile.am  Makefile.in
fizsh-1.0.4/scripts/: Makefile.in  fizsh  modify-etc-shells.sh
fizsh-dev/: Makefile.am  Makefile.in  README  configure  configure.ac
fizsh-dev/.debian/: changelog  docs  prerm  rules  watch
fizsh-dev/.debian/upstream/: signing-key.asc
fizsh-dev/debian/: README.source  changelog  control  copyright  files  fizsh.manpages  postinst  prerm  rules  watch
fizsh-dev/debian/fizsh/DEBIAN/: conffiles  control  md5sums  postinst  prerm
fizsh-dev/debian/fizsh/etc/fizsh/: fizsh-miscellaneous.zsh
fizsh-dev/debian/fizsh/usr/share/doc/fizsh/: copyright
fizsh-dev/doc/: Makefile.am  Makefile.in  changelog  copyright
fizsh-dev/examples/: Makefile.in
fizsh-dev/man/: Makefile.am  Makefile.in  README  fizsh.1  fizsh.pod
fizsh-dev/scripts/: Makefile.am  Makefile.in  fizsh  fizsh-miscellaneous.zsh  fizsh-prompt.zsh  fizshrc.zsh  modify-version-number.sh
fizsh-dev/src/: Makefile.in
man/: Makefile.am  Makefile.in  README  fizsh.pod
scripts/: Makefile.am  Makefile.in  brackets-highlighter.zsh  cursor-highlighter.zsh  fizsh  fizsh-miscellaneous.zsh  fizsh-prompt.zsh  fizshrc.zsh  line-highlighter.zsh  main-highlighter.zsh  modify-etc-shells.sh  pattern-highlighter.zsh  root-highlighter.zsh  zsh-history-substring-search.zsh  zsh-syntax-highlighting.zsh
usr/share/doc/fizsh/: copyright  zsh-syntax-highlighting.readme
