#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([fizsh], [1.0.7], [Guido van Steen <vansteen@users.sourceforge.net>])
AM_INIT_AUTOMAKE(fizsh, 1.0.7)
AM_MAINTAINER_MODE
AC_CHECK_PROGS(POD2MAN, [perl], [false])
AC_OUTPUT(Makefile doc/Makefile man/Makefile scripts/Makefile)
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
