bin_SCRIPTS = fizsh
scriptdir = /etc/fizsh
script_SCRIPTS = fizshrc.zsh zsh-history-substring-search.zsh zsh-syntax-highlighting.zsh fizsh-prompt.zsh modify-etc-shells.sh brackets-highlighter.zsh cursor-highlighter.zsh main-highlighter.zsh pattern-highlighter.zsh root-highlighter.zsh fizsh-miscellaneous.zsh
